--- a/web/index.ejs
+++ b/web/index.ejs
@@ -32,7 +32,7 @@
             </div>
 
             <div class="form-group">
-              <input class="form-control" type="number" placeholder="Peso da Entrega" ng-model="form.value.weight" required>
+              <input class="form-control" type="text" placeholder="Peso da Entrega: 0.00" ng-model="form.value.weight" required>
             </div>
 
             <div class="form-group">
